Intermittent GECKO(2175) | Assertion failure: droppedFrames <= totalFrames, at /builds/worker/workspace/build/src/dom/media/mediacapabilities/DecoderBenchmark.cpp:19
Categories
(Core :: Audio/Video, defect, P5)
Tracking
()
Tracking | Status | |
---|---|---|
firefox78 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: achronop)
Details
(Keywords: intermittent-failure)
Attachments
(1 file)
Filed by: apavel [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=276221241&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/ZR5koGsPTACtE7eXK1_Kmg/runs/0/artifacts/public/logs/live_backing.log
[task 2019-11-14T16:51:06.687Z] 16:51:06 INFO - TEST-START | dom/media/test/test_play_promise_2.html
[task 2019-11-14T16:51:06.750Z] 16:51:06 INFO - GECKO(2175) | --DOCSHELL 0x7fd314e12800 == 3 [pid = 2279] [id = {936c6970-2504-44e5-9efb-3b7f2ff530e0}] [url = about:blank]
[task 2019-11-14T16:51:06.753Z] 16:51:06 INFO - GECKO(2175) | [Parent 2175, Main Thread] WARNING: Cannot set transparency mode on non-popup windows.: file /builds/worker/workspace/build/src/widget/gtk/nsWindow.cpp, line 4563
[task 2019-11-14T16:51:06.794Z] 16:51:06 INFO - GECKO(2175) | [Parent 2175, Main Thread] WARNING: NS_ENSURE_TRUE(aCSP) failed: file /builds/worker/workspace/build/src/dom/security/FramingChecker.cpp, line 176
[task 2019-11-14T16:51:06.811Z] 16:51:06 INFO - GECKO(2175) | ++DOMWINDOW == 10 (0x7fd31490c000) [pid = 2279] [serial = 684] [outer = 0x7fd31fe87020]
[task 2019-11-14T16:51:06.893Z] 16:51:06 INFO - GECKO(2175) | ++DOCSHELL 0x7fd314a88800 == 4 [pid = 2279] [id = {840ea6d5-33bb-4ef4-87e2-0dada71a034e}]
[task 2019-11-14T16:51:06.894Z] 16:51:06 INFO - GECKO(2175) | ++DOMWINDOW == 11 (0x7fd31ed5b020) [pid = 2279] [serial = 685] [outer = (nil)]
[task 2019-11-14T16:51:06.909Z] 16:51:06 INFO - GECKO(2175) | ++DOMWINDOW == 12 (0x7fd314aadc00) [pid = 2279] [serial = 686] [outer = 0x7fd31ed5b020]
[task 2019-11-14T16:51:06.957Z] 16:51:06 INFO - GECKO(2175) | [Child 2279, MediaDecoderStateMachine #1] WARNING: Decoder=7fd3168c3c00 state=SEEKING Audio not synced after seek, maybe a poorly muxed file?: file /builds/worker/workspace/build/src/dom/media/MediaDecoderStateMachine.cpp, line 1316
[task 2019-11-14T16:51:07.025Z] 16:51:07 INFO - GECKO(2175) | [Parent 2175, Main Thread] WARNING: Cannot set transparency mode on non-popup windows.: file /builds/worker/workspace/build/src/widget/gtk/nsWindow.cpp, line 4563
[task 2019-11-14T16:51:07.464Z] 16:51:07 INFO - GECKO(2175) | [Child 2279, MediaPDecoder #5] WARNING: Unimplemented function NotifyDataArrived: file /builds/worker/workspace/build/src/dom/media/mp3/MP3Demuxer.cpp, line 72
[task 2019-11-14T16:51:07.540Z] 16:51:07 INFO - GECKO(2175) | Assertion failure: droppedFrames <= totalFrames, at /builds/worker/workspace/build/src/dom/media/mediacapabilities/DecoderBenchmark.cpp:19
[task 2019-11-14T16:51:30.702Z] 16:51:30 INFO - GECKO(2175) | #01: mozilla::DecoderBenchmark::Store(mozilla::DecoderBenchmarkInfo const&, RefPtr<mozilla::FrameStatistics>) [dom/media/mediacapabilities/DecoderBenchmark.cpp:172]
[task 2019-11-14T16:51:30.702Z] 16:51:30 INFO -
[task 2019-11-14T16:51:30.703Z] 16:51:30 INFO - GECKO(2175) | #02: mozilla::MediaDecoder::OnStoreDecoderBenchmark(mozilla::VideoInfo const&) [dom/media/MediaDecoder.cpp:530]
[task 2019-11-14T16:51:30.704Z] 16:51:30 INFO -
[task 2019-11-14T16:51:30.705Z] 16:51:30 INFO - GECKO(2175) | #03: mozilla::detail::RunnableMethodImpl<mozilla::detail::Listener<mozilla::VideoInfo>, void (mozilla::detail::Listener<mozilla::VideoInfo>::)(mozilla::VideoInfo&&), true, (mozilla::RunnableKind)0, mozilla::VideoInfo&&>::Run() [xpcom/threads/nsThreadUtils.h:1179]
[task 2019-11-14T16:51:30.705Z] 16:51:30 INFO -
[task 2019-11-14T16:51:30.706Z] 16:51:30 INFO - GECKO(2175) | #04: mozilla::AutoTaskDispatcher::TaskGroupRunnable::Run() [xpcom/threads/TaskDispatcher.h:200]
[task 2019-11-14T16:51:30.706Z] 16:51:30 INFO -
[task 2019-11-14T16:51:30.707Z] 16:51:30 INFO - GECKO(2175) | #05: mozilla::EventTargetWrapper::Runner::Run() [xpcom/threads/AbstractThread.cpp:113]
[task 2019-11-14T16:51:30.707Z] 16:51:30 INFO -
[task 2019-11-14T16:51:30.709Z] 16:51:30 INFO - GECKO(2175) | #06: mozilla::SchedulerGroup::Runnable::Run() [xpcom/threads/SchedulerGroup.cpp:295]
[task 2019-11-14T16:51:30.709Z] 16:51:30 INFO -
[task 2019-11-14T16:51:30.710Z] 16:51:30 INFO - GECKO(2175) | #07: nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:1250]
[task 2019-11-14T16:51:30.710Z] 16:51:30 INFO -
[task 2019-11-14T16:51:30.711Z] 16:51:30 INFO - GECKO(2175) | #08: NS_ProcessNextEvent(nsIThread*, bool) [xpcom/threads/nsThreadUtils.cpp:486]
[task 2019-11-14T16:51:30.711Z] 16:51:30 INFO -
[task 2019-11-14T16:51:30.711Z] 16:51:30 INFO - GECKO(2175) | #09: mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:88]
[task 2019-11-14T16:51:30.712Z] 16:51:30 INFO -
[task 2019-11-14T16:51:30.712Z] 16:51:30 INFO - GECKO(2175) | #10: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:291]
[task 2019-11-14T16:51:30.713Z] 16:51:30 INFO -
[task 2019-11-14T16:51:30.713Z] 16:51:30 INFO - GECKO(2175) | #11: nsBaseAppShell::Run() [widget/nsBaseAppShell.cpp:139]
[task 2019-11-14T16:51:30.714Z] 16:51:30 INFO -
[task 2019-11-14T16:51:30.714Z] 16:51:30 INFO - GECKO(2175) | #12: XRE_RunAppShell() [toolkit/xre/nsEmbedFunctions.cpp:934]
[task 2019-11-14T16:51:30.714Z] 16:51:30 INFO -
[task 2019-11-14T16:51:30.715Z] 16:51:30 INFO - GECKO(2175) | #13: mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:238]
[task 2019-11-14T16:51:30.715Z] 16:51:30 INFO -
[task 2019-11-14T16:51:30.716Z] 16:51:30 INFO - GECKO(2175) | #14: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:291]
[task 2019-11-14T16:51:30.717Z] 16:51:30 INFO -
[task 2019-11-14T16:51:30.717Z] 16:51:30 INFO - GECKO(2175) | #15: XRE_InitChildProcess(int, char**, XREChildData const*) [toolkit/xre/nsEmbedFunctions.cpp:769]
[task 2019-11-14T16:51:30.718Z] 16:51:30 INFO -
[task 2019-11-14T16:51:30.935Z] 16:51:30 INFO - GECKO(2175) | #16: content_process_main(mozilla::Bootstrap*, int, char**) [ipc/contentproc/plugin-container.cpp:57]
[task 2019-11-14T16:51:30.936Z] 16:51:30 INFO -
[task 2019-11-14T16:51:30.937Z] 16:51:30 INFO - GECKO(2175) | #17: main [browser/app/nsBrowserApp.cpp:272]
[task 2019-11-14T16:51:30.937Z] 16:51:30 INFO -
[task 2019-11-14T16:51:30.938Z] 16:51:30 INFO - GECKO(2175) | #18: libc.so.6 + 0x20830
[task 2019-11-14T16:51:30.938Z] 16:51:30 INFO -
[task 2019-11-14T16:51:30.939Z] 16:51:30 INFO - GECKO(2175) | #19: _start
[task 2019-11-14T16:51:30.940Z] 16:51:30 INFO -
[task 2019-11-14T16:51:30.940Z] 16:51:30 INFO - GECKO(2175) | [Parent 2175, Gecko_IOThread] WARNING: pipe error (93): Connection reset by peer: file /builds/worker/workspace/build/src/ipc/chromium/src/chrome/common/ipc_channel_posix.cc, line 358
[task 2019-11-14T16:51:30.941Z] 16:51:30 INFO - GECKO(2175) | [Parent 2175, Main Thread] WARNING: IPC message discarded: actor cannot send: file /builds/worker/workspace/build/src/ipc/glue/ProtocolUtils.cpp, line 481
[task 2019-11-14T16:51:30.941Z] 16:51:30 INFO - GECKO(2175) | [Parent 2175, Main Thread] WARNING: IPC message discarded: actor cannot send: file /builds/worker/workspace/build/src/ipc/glue/ProtocolUtils.cpp, line 481
[task 2019-11-14T16:51:30.942Z] 16:51:30 INFO - GECKO(2175) | [Parent 2175, Main Thread] WARNING: IPC message discarded: actor cannot send: file /builds/worker/workspace/build/src/ipc/glue/ProtocolUtils.cpp, line 481
[task 2019-11-14T16:51:30.942Z] 16:51:30 INFO - GECKO(2175) | [GPU 2218, Compositor] WARNING: bad Shmem: file /builds/worker/workspace/build/src/ipc/glue/ProtocolUtils.cpp, line 440
[task 2019-11-14T16:51:30.943Z] 16:51:30 INFO - GECKO(2175) | [GPU 2218, Compositor] WARNING: bad Shmem: file /builds/worker/workspace/build/src/ipc/glue/ProtocolUtils.cpp, line 440
[task 2019-11-14T16:51:30.943Z] 16:51:30 INFO - GECKO(2175) | [GPU 2218, Compositor] WARNING: bad Shmem: file /builds/worker/workspace/build/src/ipc/glue/ProtocolUtils.cpp, line 440
[task 2019-11-14T16:51:30.944Z] 16:51:30 INFO - GECKO(2175) | [GPU 2218, Compositor] WARNING: bad Shmem: file /builds/worker/workspace/build/src/ipc/glue/ProtocolUtils.cpp, line 440
[task 2019-11-14T16:51:30.944Z] 16:51:30 INFO - GECKO(2175) | [GPU 2218, Compositor] WARNING: bad Shmem: file /builds/worker/workspace/build/src/ipc/glue/ProtocolUtils.cpp, line 440
[task 2019-11-14T16:51:30.945Z] 16:51:30 INFO - GECKO(2175) | [GPU 2218, Compositor] WARNING: bad Shmem: file /builds/worker/workspace/build/src/ipc/glue/ProtocolUtils.cpp, line 440
[task 2019-11-14T16:51:30.945Z] 16:51:30 INFO - GECKO(2175) | ++DOCSHELL 0x7fee4047c000 == 5 [pid = 2175] [id = {fe9d6756-8cb4-42f9-93d7-0488cf103d09}]
[task 2019-11-14T16:51:30.946Z] 16:51:30 INFO - GECKO(2175) | ++DOMWINDOW == 9 (0x7fee45ab35c0) [pid = 2175] [serial = 131] [outer = (nil)]
[task 2019-11-14T16:51:30.946Z] 16:51:30 INFO - GECKO(2175) | ++DOMWINDOW == 10 (0x7fee45db0800) [pid = 2175] [serial = 132] [outer = 0x7fee45ab35c0]
Comment hidden (Intermittent Failures Robot) |
Comment 2•6 years ago
|
||
https://wiki.mozilla.org/Bug_Triage#Intermittent_Test_Failure_Cleanup
For more information, please visit auto_nag documentation.
Comment 3•5 years ago
|
||
Recent failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=300475632&repo=mozilla-central&lineNumber=4074
Comment hidden (Intermittent Failures Robot) |
Assignee | ||
Comment 5•5 years ago
|
||
The total frames are the dropped frames + the represented frames
. So in a given moment, it is impossible to have dropped frames > total frames
unless another thread has added the dropped frames between the two getters, which is possible since they lock the mutex separately. I will update it to get the dropped and total frames under the same mutex lock.
Assignee | ||
Comment 6•5 years ago
|
||
Get all the statistics in one call, under the same mutex, and extract from them the decoded and total frames. The individual getters were previously used, created uncertainty since they lock the mutex separately.
![]() |
||
Comment 8•5 years ago
|
||
bugherder |
Description
•