Bug 1596528 - Get the statistics under the same mutex to avoid inconsistency. r=padenot

Get all the statistics in one call, under the same mutex, and extract from them the decoded and total frames. The individual getters were previously used, created uncertainty since they lock the mutex separately.

Differential Revision: https://phabricator.services.mozilla.com/D75096